i18n - pulling from tx

--- a/locale/es/foreman_kubevirt.po
+++ b/locale/es/foreman_kubevirt.po
@@ -47,7 +47,7 @@ msgid "CA crt for KubeVirt only"
 msgstr "CA crt sólo para KubeVirt"
 
 msgid "CNI Provider"
-msgstr "Proveedor"
+msgstr "Proveedor CNI"
 
 msgid "CPUs"
 msgstr "CPU"
@@ -133,7 +133,9 @@ msgstr "El nombre de la imagen en el registro."
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
 "           If you are sure the remote system is authentic, go to the compute resource edit page, press the 'Test Connection' button and submit"
-msgstr "El sistema remoto presentó una llave pública firmada por una autoridad de certificación desconocida. Si está seguro de que el sistema remoto es auténtico, vaya a la página de edición de los recursos de cómputo, presione los botones 'Probar conexión' o 'Cargar centros de datos' y envíelo."
+msgstr ""
+"El sistema remoto presentó una clave pública firmada por una autoridad de certificación no identificada.\n"
+"           Si está seguro de que el sistema remoto es auténtico, vaya a la página de edición del recurso informático, pulse el botón \"Probar conexión\" y envíe el siguiente mensaje"
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
 msgstr "El usuario utilizado para conectar por ssh en la instancia, por lo general: cloud-user, ec2-user, ubuntu, o root."
