--- a/locale/pt_BR/foreman_kubevirt.po
+++ b/locale/pt_BR/foreman_kubevirt.po
@@ -45,7 +45,7 @@ msgid "CA crt for KubeVirt only"
 msgstr "CA crt somente para KubeVirt"
 
 msgid "CNI Provider"
-msgstr "Fornecedor"
+msgstr "Fornecedor da CNI"
 
 msgid "CPUs"
 msgstr "CPUs"
@@ -131,7 +131,9 @@ msgstr "O nome da imagem no registro."
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
 "           If you are sure the remote system is authentic, go to the compute resource edit page, press the 'Test Connection' button and submit"
-msgstr "O sistema remoto apresentou uma chave pública assinada por uma autoridade de certificação não identificada. Se você tem certeza que o sistema remoto é autêntico, vá para a página de edição de recursos de computação, pressione o botão 'Testar conexão' ou o botão 'Datacenters Load' e submeta"
+msgstr ""
+"O sistema remoto apresentou uma chave pública assinada por uma autoridade certificadora não identificada.\n"
+"           Se você tiver certeza de que o sistema remoto é autêntico, vá para a página de edição de recursos de computação, pressione o botão 'Test Connection' e envie"
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
 msgstr "O usuário utilizado para realizar o ssh na instância, normalmente cloud-user, ec2-user, ubuntu, root etc"
