--- a/locale/ca/foreman_kubevirt.po
+++ b/locale/ca/foreman_kubevirt.po
@@ -6,14 +6,13 @@
 # Translators:
 # Robert Antoni Buj i Gelonch <rbuj@fedoraproject.org>, 2020
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Robert Antoni Buj i Gelonch <rbuj@fedoraproject.org>, 2020\n"
-"Language-Team: Catalan (https://www.transifex.com/foreman/teams/114/ca/)\n"
+"Language-Team: Catalan (https://app.transifex.com/foreman/teams/114/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -149,6 +148,9 @@ msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
 
 msgid "VM should be created based on an image"
+msgstr ""
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
