--- a/locale/cs_CZ/foreman_kubevirt.po
+++ b/locale/cs_CZ/foreman_kubevirt.po
@@ -8,14 +8,13 @@
 # Pavel Borecki <pavel.borecki@gmail.com>, 2020
 # mhulan <mhulan@redhat.com>, 2020
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: mhulan <mhulan@redhat.com>, 2020\n"
-"Language-Team: Czech (Czech Republic) (https://www.transifex.com/foreman/teams"
+"Language-Team: Czech (Czech Republic) (https://app.transifex.com/foreman/teams"
 "/114/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -153,6 +152,9 @@ msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
 
 msgid "VM should be created based on an image"
+msgstr ""
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
