--- a/locale/de/foreman_kubevirt.po
+++ b/locale/de/foreman_kubevirt.po
@@ -16,14 +16,13 @@
 # Markus Bucher <bucher@atix.de>, 2020
 # Patrick Dolinic, 2021
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Patrick Dolinic, 2021\n"
-"Language-Team: German (https://www.transifex.com/foreman/teams/114/de/)\n"
+"Language-Team: German (https://app.transifex.com/foreman/teams/114/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -162,6 +161,9 @@ msgstr "VM sollte basierend auf Persistent-Volume-Claim oder Image erstellt werd
 
 msgid "VM should be created based on an image"
 msgstr "VM sollte basierend auf einem Image erstellt werden"
+
+msgid "Volume size %s is not valid"
+msgstr ""
 
 msgid "X509 Certification Authorities"
 msgstr "X509-Zertifizierungsstellen (CA)"
