--- a/locale/en_GB/foreman_kubevirt.po
+++ b/locale/en_GB/foreman_kubevirt.po
@@ -4,17 +4,16 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 # Translators:
-# Andi Chandler <andi@gowling.com>, 2020
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
+# Andi Chandler <andi@gowling.com>, 2023
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: 0868a4d1af5275b3f70b0a6dac4c99a4, 2020\n"
-"Language-Team: English (United Kingdom) (https://www.transifex.com/foreman/tea"
+"Last-Translator: Andi Chandler <andi@gowling.com>, 2023\n"
+"Language-Team: English (United Kingdom) (https://app.transifex.com/foreman/tea"
 "ms/114/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,153 +22,158 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr ""
+msgstr "%{cpu_cores} Cores and %{memory} memory"
 
 msgid "API Port"
-msgstr ""
+msgstr "API Port"
 
 msgid "API port for KubeVirt only"
-msgstr ""
+msgstr "API port for KubeVirt only"
 
 msgid "Actions"
 msgstr "Actions"
 
 msgid "Bootable"
-msgstr ""
+msgstr "Bootable"
 
 msgid "CA crt for KubeVirt only"
-msgstr ""
+msgstr "CA crt for KubeVirt only"
 
 msgid "CNI Provider"
-msgstr ""
+msgstr "CNI Provider"
 
 msgid "CPUs"
 msgstr "CPUs"
 
 msgid "Disk"
-msgstr ""
+msgstr "Disk"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
-msgstr ""
+msgstr "Does this image support user data input (e.g. via cloud-init)?"
 
 msgid "Host name for KubeVirt only"
-msgstr ""
+msgstr "Host name for KubeVirt only"
 
 msgid "Hostname"
 msgstr "Hostname"
 
 msgid "Image"
-msgstr ""
+msgstr "Image"
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
+msgstr "It is not possible to set a bootable volume and image based provisioning."
 
 msgid "Memory"
 msgstr "Memory"
 
 msgid "NIC"
-msgstr ""
+msgstr "NIC"
 
 msgid "Name"
 msgstr "Name"
 
 msgid "Namespace"
-msgstr ""
+msgstr "Namespace"
 
 msgid "Namespace for KubeVirt only"
-msgstr ""
+msgstr "Namespace for KubeVirt only"
 
 msgid "Network"
 msgstr "Network"
 
 msgid "Only one volume can be bootable"
-msgstr ""
+msgstr "Only one volume can be bootable"
 
 msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr ""
+msgstr "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
 
 msgid "Password to authenticate with - used for SSH finish step."
-msgstr ""
+msgstr "Password to authenticate with - used for SSH finish step."
 
 msgid "Please select an image"
-msgstr ""
+msgstr "Please select an image"
 
 msgid "Power"
-msgstr ""
+msgstr "Power"
 
 msgid "Power ON this machine"
-msgstr ""
+msgstr "Power ON this machine"
 
 msgid "Properties"
-msgstr ""
+msgstr "Properties"
 
 msgid "Provision and manage Kubevirt Virtual Machines from Foreman."
-msgstr ""
+msgstr "Provision and manage Kubevirt Virtual Machines from Foreman."
 
 msgid "Running on"
-msgstr ""
+msgstr "Running on"
 
 msgid "Size (GB)"
-msgstr ""
+msgstr "Size (GB)"
 
 msgid "Start"
-msgstr ""
+msgstr "Start"
 
 msgid "Storage Class"
-msgstr ""
+msgstr "Storage Class"
 
 msgid "The compute resource could not be authenticated"
-msgstr ""
+msgstr "The compute resource could not be authenticated"
 
 msgid "The name of the image in the registry."
-msgstr ""
+msgstr "The name of the image in the registry."
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
 "           If you are sure the remote system is authentic, go to the compute resource edit page, press the 'Test Connection' button and submit"
 msgstr ""
+"The remote system presented a public key signed by an unidentified certificate authority.\n"
+"           If you are sure the remote system is authentic, go to the compute resource edit page, press the 'Test Connection' button and submit"
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
-msgstr ""
+msgstr "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
 
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 msgid "Token for KubeVirt only"
-msgstr ""
+msgstr "Token for KubeVirt only"
 
 msgid "Type"
 msgstr "Type"
 
 msgid "UUID"
-msgstr ""
+msgstr "UUID"
 
 msgid "VCPU(s)"
-msgstr ""
+msgstr "VCPU(s)"
 
 msgid "VM should be created based on Persistent Volume Claim or Image"
-msgstr ""
+msgstr "VM should be created based on Persistent Volume Claim or Image"
 
 msgid "VM should be created based on an image"
+msgstr "VM should be created based on an image"
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
-msgstr ""
+msgstr "X509 Certification Authorities"
 
 msgid "cni_provider or network are missing"
-msgstr ""
+msgstr "cni_provider or network are missing"
 
 msgid "e.g. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."
-msgstr ""
+msgstr "e.g. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."
 
 msgid "genie"
-msgstr ""
+msgstr "genie"
 
 msgid "multus"
-msgstr ""
+msgstr "multus"
 
 msgid "no Storage Classes available on provider"
-msgstr ""
+msgstr "no Storage Classes available on provider"
 
 msgid "pod"
-msgstr ""
+msgstr "pod"
