--- a/locale/es/foreman_kubevirt.po
+++ b/locale/es/foreman_kubevirt.po
@@ -13,14 +13,13 @@
 # Sergio Ocón-Cárdenas <sergio.ocon@redhat.com>, 2020
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
-"Language-Team: Spanish (https://www.transifex.com/foreman/teams/114/es/)\n"
+"Language-Team: Spanish (https://app.transifex.com/foreman/teams/114/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -160,6 +159,9 @@ msgstr "La máquina virtual debe crearse a partir de una reclamación de volumen
 
 msgid "VM should be created based on an image"
 msgstr "La máquina virtual debe crearse a partir de una imagen"
+
+msgid "Volume size %s is not valid"
+msgstr ""
 
 msgid "X509 Certification Authorities"
 msgstr "Autoridades de certificación X509"
