--- a/locale/fr/foreman_kubevirt.po
+++ b/locale/fr/foreman_kubevirt.po
@@ -10,14 +10,13 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # Amit Upadhye <aupadhye@redhat.com>, 2023
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2023\n"
-"Language-Team: French (https://www.transifex.com/foreman/teams/114/fr/)\n"
+"Language-Team: French (https://app.transifex.com/foreman/teams/114/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -155,6 +154,9 @@ msgstr "La VM doit être créée sur la base d'une demande de volume ou d'une im
 
 msgid "VM should be created based on an image"
 msgstr "La VM doit être créée à partir d'une image"
+
+msgid "Volume size %s is not valid"
+msgstr ""
 
 msgid "X509 Certification Authorities"
 msgstr "Autorités de certification X509"
