--- a/locale/nl_NL/foreman_kubevirt.po
+++ b/locale/nl_NL/foreman_kubevirt.po
@@ -9,14 +9,13 @@
 # EmielK <emiel@kremers.us>, 2020
 # Mark Olie <mark.transifex@oliekoets.nl>, 2020
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Mark Olie <mark.transifex@oliekoets.nl>, 2020\n"
-"Language-Team: Dutch (Netherlands) (https://www.transifex.com/foreman/teams/11"
+"Language-Team: Dutch (Netherlands) (https://app.transifex.com/foreman/teams/11"
 "4/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -153,6 +152,9 @@ msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
 
 msgid "VM should be created based on an image"
+msgstr ""
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
