--- a/locale/pl/foreman_kubevirt.po
+++ b/locale/pl/foreman_kubevirt.po
@@ -7,14 +7,13 @@
 # sziolkow <sziolkow@gmail.com>, 2020
 # Michał Foryt <michal.foryt@gmail.com>, 2020
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Michał Foryt <michal.foryt@gmail.com>, 2020\n"
-"Language-Team: Polish (https://www.transifex.com/foreman/teams/114/pl/)\n"
+"Language-Team: Polish (https://app.transifex.com/foreman/teams/114/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -152,6 +151,9 @@ msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
 
 msgid "VM should be created based on an image"
+msgstr ""
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
