--- a/locale/ru/foreman_kubevirt.po
+++ b/locale/ru/foreman_kubevirt.po
@@ -11,14 +11,13 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # Vladimir Pavlov <v.pavlov@i-teco.ru>, 2020
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Vladimir Pavlov <v.pavlov@i-teco.ru>, 2020\n"
-"Language-Team: Russian (https://www.transifex.com/foreman/teams/114/ru/)\n"
+"Language-Team: Russian (https://app.transifex.com/foreman/teams/114/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -156,6 +155,9 @@ msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
 
 msgid "VM should be created based on an image"
+msgstr ""
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
