--- a/locale/zh_CN/foreman_kubevirt.po
+++ b/locale/zh_CN/foreman_kubevirt.po
@@ -9,14 +9,13 @@
 # tim123, 2020
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
-"Language-Team: Chinese (China) (https://www.transifex.com/foreman/teams/114/zh"
+"Language-Team: Chinese (China) (https://app.transifex.com/foreman/teams/114/zh"
 "_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -156,6 +155,9 @@ msgstr "虚拟机应基于持久卷声明或镜像创建"
 
 msgid "VM should be created based on an image"
 msgstr "VM 应基于镜像创建"
+
+msgid "Volume size %s is not valid"
+msgstr ""
 
 msgid "X509 Certification Authorities"
 msgstr "X509 证书授权"
