--- a/locale/zh_TW/foreman_kubevirt.po
+++ b/locale/zh_TW/foreman_kubevirt.po
@@ -7,14 +7,13 @@
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>, 2020\n"
-"Language-Team: Chinese (Taiwan) (https://www.transifex.com/foreman/teams/114/z"
+"Language-Team: Chinese (Taiwan) (https://app.transifex.com/foreman/teams/114/z"
 "h_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -151,6 +150,9 @@ msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
 
 msgid "VM should be created based on an image"
+msgstr ""
+
+msgid "Volume size %s is not valid"
 msgstr ""
 
 msgid "X509 Certification Authorities"
