--- a/locale/de/foreman_kubevirt.po
+++ b/locale/de/foreman_kubevirt.po
@@ -14,14 +14,14 @@
 # mbacovsky <martin.bacovsky@gmail.com>, 2020
 # Martin Zimmermann <martin.zimmermann@gmx.com>, 2020
 # Markus Bucher <bucher@atix.de>, 2020
-# Patrick Dolinic, 2021
+# pdolinic, 2021
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Patrick Dolinic, 2021\n"
+"Last-Translator: pdolinic, 2021\n"
 "Language-Team: German (https://app.transifex.com/foreman/teams/114/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
