--- a/locale/fr/foreman_kubevirt.po
+++ b/locale/fr/foreman_kubevirt.po
@@ -9,13 +9,15 @@
 # Claer <transiblu@claer.hammock.fr>, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # Amit Upadhye <aupadhye@redhat.com>, 2023
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2023
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2023\n"
+"Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
+"n.nl>, 2023\n"
 "Language-Team: French (https://app.transifex.com/foreman/teams/114/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +27,7 @@ msgstr ""
 "0 == 0 ? 1 : 2;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr "%{cpu_cores} Cores et %{memory} mémoire"
+msgstr "%%{cpu_cores} Cores et %{memory} mémoire"
 
 msgid "API Port"
 msgstr "Port API"
@@ -156,7 +158,7 @@ msgid "VM should be created based on an image"
 msgstr "La VM doit être créée à partir d'une image"
 
 msgid "Volume size %s is not valid"
-msgstr ""
+msgstr "La taille du volume %s n’est pas valide"
 
 msgid "X509 Certification Authorities"
 msgstr "Autorités de certification X509"
