--- a/locale/it/foreman_kubevirt.po
+++ b/locale/it/foreman_kubevirt.po
@@ -6,14 +6,14 @@
 # Translators:
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
-# Giuseppe Pignataro <rogepix@gmail.com>, 2020
+# Giuseppe Pignataro (Fastbyte01) <rogepix@gmail.com>, 2020
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Giuseppe Pignataro <rogepix@gmail.com>, 2020\n"
+"Last-Translator: Giuseppe Pignataro (Fastbyte01) <rogepix@gmail.com>, 2020\n"
 "Language-Team: Italian (https://app.transifex.com/foreman/teams/114/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
