--- a/locale/ja/foreman_kubevirt.po
+++ b/locale/ja/foreman_kubevirt.po
@@ -6,16 +6,17 @@
 # Translators:
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
-# 山田 修司 🍣 Shuji Yamada <uzy.exe@gmail.com>, 2020
 # Transifex Bot <>, 2020
-# Amit Upadhye <aupadhye@redhat.com>, 2022
+# Amit Upadhye <aupadhye@redhat.com>, 2020
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2023
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
+"Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
+"n.nl>, 2023\n"
 "Language-Team: Japanese (https://app.transifex.com/foreman/teams/114/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr "コア ％{cpu_cores} 個およびメモリー %{memory}"
+msgstr "コア %{cpu_cores} 個およびメモリー %{memory}"
 
 msgid "API Port"
 msgstr "API ポート"
@@ -157,7 +158,7 @@ msgid "VM should be created based on an image"
 msgstr "仮想マシンはイメージをもとに作成する必要があります"
 
 msgid "Volume size %s is not valid"
-msgstr ""
+msgstr "ボリュームサイズ %s は無効です"
 
 msgid "X509 Certification Authorities"
 msgstr "X509 証明機関"
