--- a/locale/nl_NL/foreman_kubevirt.po
+++ b/locale/nl_NL/foreman_kubevirt.po
@@ -8,13 +8,15 @@
 # dschutterop <daniel@schutterop.nl>, 2020
 # EmielK <emiel@kremers.us>, 2020
 # Mark Olie <mark.transifex@oliekoets.nl>, 2020
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2023
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Mark Olie <mark.transifex@oliekoets.nl>, 2020\n"
+"Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
+"n.nl>, 2023\n"
 "Language-Team: Dutch (Netherlands) (https://app.transifex.com/foreman/teams/11"
 "4/nl_NL/)\n"
 "MIME-Version: 1.0\n"
@@ -140,7 +142,7 @@ msgid "Token for KubeVirt only"
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Type"
 
 msgid "UUID"
 msgstr ""
