--- a/locale/zh_CN/foreman_kubevirt.po
+++ b/locale/zh_CN/foreman_kubevirt.po
@@ -8,13 +8,15 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # tim123, 2020
 # Amit Upadhye <aupadhye@redhat.com>, 2022
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2023
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
+"Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
+"n.nl>, 2023\n"
 "Language-Team: Chinese (China) (https://app.transifex.com/foreman/teams/114/zh"
 "_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +26,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr "%{cpu_cores} 个内核和 %{memory} 内存"
+msgstr "%{cpu_cores} 内核和%{memory} 内存"
 
 msgid "API Port"
 msgstr "API 端口"
@@ -133,7 +135,7 @@ msgstr ""
 "           如果您确定该远程系统可信，请进入计算资源编辑页面，按“测试连接”按纽并提交。"
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
-msgstr "使用 ssh 进入该实例的用户，通常为 cloud-user, ec2-user, ubuntu, root 等等。"
+msgstr "使用 ssh 进入该实例的用户，通常为 cloud-user, ec2-user, ubuntu, root 等等"
 
 msgid "Token"
 msgstr "令牌"
@@ -157,7 +159,7 @@ msgid "VM should be created based on an image"
 msgstr "VM 应基于镜像创建"
 
 msgid "Volume size %s is not valid"
-msgstr ""
+msgstr "卷大小 %s 无效"
 
 msgid "X509 Certification Authorities"
 msgstr "X509 证书授权"
