i18n - pulling from tx

--- a/locale/ko/foreman_kubevirt.po
+++ b/locale/ko/foreman_kubevirt.po
@@ -10,7 +10,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.1.9\n"
+"Project-Id-Version: foreman_kubevirt 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
@@ -23,13 +23,13 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr ""
+msgstr "%{cpu_cores} 코어 및%{memory} 메모리"
 
 msgid "API Port"
-msgstr ""
+msgstr "API 포트"
 
 msgid "API port for KubeVirt only"
-msgstr ""
+msgstr "KubeVirt 전용 API 포트"
 
 msgid "Actions"
 msgstr "동작 "
@@ -38,10 +38,10 @@ msgid "Bootable"
 msgstr "부팅가능"
 
 msgid "CA crt for KubeVirt only"
-msgstr ""
+msgstr "KubeVirt 전용 CA 인증서"
 
 msgid "CNI Provider"
-msgstr ""
+msgstr "CNI 제공자"
 
 msgid "CPUs"
 msgstr "CPU"
@@ -53,7 +53,7 @@ msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "이 이미지는 사용자 데이터 입력 (예: cloud-init 통해)을 지원하고 있습니까?"
 
 msgid "Host name for KubeVirt only"
-msgstr ""
+msgstr "KubeVirt 전용 호스트 이름"
 
 msgid "Hostname"
 msgstr "호스트 이름"
@@ -62,7 +62,7 @@ msgid "Image"
 msgstr "이미지 "
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
+msgstr "부팅 가능한 볼륨과 이미지 기반 프로비저닝을 설정할 수 없습니다."
 
 msgid "Memory"
 msgstr "메모리"
@@ -74,10 +74,10 @@ msgid "Name"
 msgstr "이름 "
 
 msgid "Namespace"
-msgstr ""
+msgstr "네임스페이스"
 
 msgid "Namespace for KubeVirt only"
-msgstr ""
+msgstr "KubeVirt 전용 네임스페이스"
 
 msgid "Network"
 msgstr "네트워크"
@@ -86,7 +86,7 @@ msgid "Only one volume can be bootable"
 msgstr "하나의 볼륨만 부팅할 수 있습니다 "
 
 msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr ""
+msgstr "선택적으로 CA 또는 올바르게 정렬된 CA 체인 또는 파일 경로를 지정합니다. 비워두면 안전하지 않습니다."
 
 msgid "Password to authenticate with - used for SSH finish step."
 msgstr "인증에 사용될 암호 - SSH 마지막 단계에서 사용됩니다."
@@ -104,7 +104,7 @@ msgid "Properties"
 msgstr "속성 "
 
 msgid "Provision and manage Kubevirt Virtual Machines from Foreman."
-msgstr ""
+msgstr "Foreman에서 Kubevirt 가상 머신을 프로비저닝하고 관리합니다."
 
 msgid "Running on"
 msgstr "실행 "
@@ -116,18 +116,18 @@ msgid "Start"
 msgstr "시작"
 
 msgid "Storage Class"
-msgstr ""
+msgstr "스토리지 클래스"
 
 msgid "The compute resource could not be authenticated"
-msgstr ""
+msgstr "컴퓨팅 리소스를 인증할 수 없습니다."
 
 msgid "The name of the image in the registry."
-msgstr ""
+msgstr "레지스트리에 있는 이미지의 이름입니다."
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
 "           If you are sure the remote system is authentic, go to the compute resource edit page, press the 'Test Connection' button and submit"
-msgstr ""
+msgstr "원격 시스템은 신원이 확인되지 않은 인증 기관에서 서명한 공개 키를 제시했습니다. 원격 시스템이 신뢰할 수 있다고 확신하는 경우 컴퓨팅 리소스 편집 페이지로 이동하여 '연결 테스트' 버튼을 누르고 제출합니다."
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
 msgstr "ssh를 인스턴스에 사용하는 사용자는 일반적으로 cloud-user, ec2-user, ubuntu, root 등 입니다"
@@ -136,7 +136,7 @@ msgid "Token"
 msgstr "토큰 "
 
 msgid "Token for KubeVirt only"
-msgstr ""
+msgstr "KubeVirt 전용 토큰"
 
 msgid "Type"
 msgstr "유형 "
@@ -148,31 +148,31 @@ msgid "VCPU(s)"
 msgstr "VCPU(s)"
 
 msgid "VM should be created based on Persistent Volume Claim or Image"
-msgstr ""
+msgstr "VM은 영구 볼륨 클레임 또는 이미지를 기반으로 생성되어야 합니다."
 
 msgid "VM should be created based on an image"
-msgstr ""
+msgstr "VM은 이미지를 기반으로 생성되어야 합니다."
 
 msgid "Volume size %s is not valid"
-msgstr ""
+msgstr "볼륨 크기%s이/가 잘못되었습니다"
 
 msgid "X509 Certification Authorities"
 msgstr "X509 인증 기관 "
 
 msgid "cni_provider or network are missing"
-msgstr ""
+msgstr "cni_provider 또는 네트워크가 없습니다"
 
 msgid "e.g. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."
-msgstr ""
+msgstr "e.g. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."
 
 msgid "genie"
-msgstr ""
+msgstr "genie"
 
 msgid "multus"
-msgstr ""
+msgstr "multus"
 
 msgid "no Storage Classes available on provider"
-msgstr ""
+msgstr "공급자에서 사용 가능한 스토리지 클래스가 없습니다."
 
 msgid "pod"
-msgstr ""
+msgstr "pod"
