--- a/locale/es/foreman_kubevirt.po
+++ b/locale/es/foreman_kubevirt.po
@@ -10,12 +10,12 @@
 # Carmela Rubiños <carmela.rubinos@gmail.com>, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # nefeli <vidakovic@gmail.com>, 2020
-# Sergio Ocón-Cárdenas <sergio.ocon@redhat.com>, 2020
+# Sergio Ocón-Cárdenas, 2020
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.1.9\n"
+"Project-Id-Version: foreman_kubevirt 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
