--- a/locale/ca/foreman_kubevirt.po
+++ b/locale/ca/foreman_kubevirt.po
@@ -6,9 +6,10 @@
 # Translators:
 # Robert Antoni Buj i Gelonch <rbuj@fedoraproject.org>, 2020
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Robert Antoni Buj i Gelonch <rbuj@fedoraproject.org>, 2020\n"
