--- a/locale/cs_CZ/foreman_kubevirt.po
+++ b/locale/cs_CZ/foreman_kubevirt.po
@@ -8,9 +8,10 @@
 # Pavel Borecki <pavel.borecki@gmail.com>, 2020
 # mhulan <mhulan@redhat.com>, 2020
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: mhulan <mhulan@redhat.com>, 2020\n"
