--- a/locale/de/foreman_kubevirt.po
+++ b/locale/de/foreman_kubevirt.po
@@ -16,9 +16,10 @@
 # Markus Bucher <bucher@atix.de>, 2020
 # pdolinic, 2021
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: pdolinic, 2021\n"
