--- a/locale/en_GB/foreman_kubevirt.po
+++ b/locale/en_GB/foreman_kubevirt.po
@@ -7,9 +7,10 @@
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Andi Chandler <andi@gowling.com>, 2023
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>, 2023\n"
