--- a/locale/ja/foreman_kubevirt.po
+++ b/locale/ja/foreman_kubevirt.po
@@ -10,9 +10,10 @@
 # Amit Upadhye <aupadhye@redhat.com>, 2020
 # Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2023
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
