--- a/locale/ko/foreman_kubevirt.po
+++ b/locale/ko/foreman_kubevirt.po
@@ -6,15 +6,16 @@
 # Translators:
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
-# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2024
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2025
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
-"n.nl>, 2024\n"
+"n.nl>, 2025\n"
 "Language-Team: Korean (https://app.transifex.com/foreman/teams/114/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -157,7 +158,7 @@ msgid "Volume size %s is not valid"
 msgstr "볼륨 크기%s이/가 잘못되었습니다"
 
 msgid "X509 Certification Authorities"
-msgstr "X509 인증 기관 "
+msgstr "X509 인증 기관"
 
 msgid "cni_provider or network are missing"
 msgstr "cni_provider 또는 네트워크가 없습니다"
