--- a/locale/pl/foreman_kubevirt.po
+++ b/locale/pl/foreman_kubevirt.po
@@ -7,9 +7,10 @@
 # sziolkow <sziolkow@gmail.com>, 2020
 # Michał Foryt <michal.foryt@gmail.com>, 2020
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Michał Foryt <michal.foryt@gmail.com>, 2020\n"
