--- a/locale/ru/foreman_kubevirt.po
+++ b/locale/ru/foreman_kubevirt.po
@@ -11,9 +11,10 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # Vladimir Pavlov <v.pavlov@i-teco.ru>, 2020
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Vladimir Pavlov <v.pavlov@i-teco.ru>, 2020\n"
