--- a/locale/sv_SE/foreman_kubevirt.po
+++ b/locale/sv_SE/foreman_kubevirt.po
@@ -8,9 +8,10 @@
 # Mikael Fridh <frimik@gmail.com>, 2020
 # johnny.westerlund <johnny.westerlund@gmail.com>, 2020
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: johnny.westerlund <johnny.westerlund@gmail.com>, 2020\n"
