--- a/locale/zh_TW/foreman_kubevirt.po
+++ b/locale/zh_TW/foreman_kubevirt.po
@@ -7,9 +7,10 @@
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.3.0\n"
+"Project-Id-Version: foreman_kubevirt 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>, 2020\n"
