--- a/locale/en/foreman_kubevirt.po
+++ b/locale/en/foreman_kubevirt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: foreman_kubevirt 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-10-07 14:20+0200\n"
+"PO-Revision-Date: 2026-02-11 09:08+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -18,6 +18,9 @@ msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
+msgstr ""
+
+msgid "A bootable volume is required as a target for the image"
 msgstr ""
 
 msgid "API Port"
@@ -32,7 +35,7 @@ msgstr ""
 msgid "Bootable"
 msgstr ""
 
-msgid "CA crt for KubeVirt only"
+msgid "CA cert for KubeVirt only"
 msgstr ""
 
 msgid "CNI Provider"
@@ -56,9 +59,6 @@ msgstr ""
 msgid "Image"
 msgstr ""
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
-
 msgid "Memory"
 msgstr ""
 
@@ -80,7 +80,7 @@ msgstr ""
 msgid "Only one volume can be bootable"
 msgstr ""
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
 msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
@@ -116,7 +116,7 @@ msgstr ""
 msgid "The compute resource could not be authenticated"
 msgstr ""
 
-msgid "The name of the image in the registry."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
 msgstr ""
 
 msgid ""
