--- a/locale/gl/foreman_kubevirt.po
+++ b/locale/gl/foreman_kubevirt.po
@@ -8,7 +8,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Carmela Rubiños <carmela.rubinos@gmail.com>, 2020\n"
@@ -20,6 +20,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
+msgstr ""
+
+msgid "A bootable volume is required as a target for the image"
 msgstr ""
 
 msgid "API Port"
@@ -34,7 +37,7 @@ msgstr "Accións"
 msgid "Bootable"
 msgstr "Arrancable"
 
-msgid "CA crt for KubeVirt only"
+msgid "CA cert for KubeVirt only"
 msgstr ""
 
 msgid "CNI Provider"
@@ -58,9 +61,6 @@ msgstr ""
 msgid "Image"
 msgstr "Imaxe"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
-
 msgid "Memory"
 msgstr "Memoria"
 
@@ -82,7 +82,7 @@ msgstr "Rede"
 msgid "Only one volume can be bootable"
 msgstr ""
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
 msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
@@ -118,7 +118,7 @@ msgstr ""
 msgid "The compute resource could not be authenticated"
 msgstr ""
 
-msgid "The name of the image in the registry."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
 msgstr ""
 
 msgid ""
