--- a/locale/cs_CZ/foreman_kubevirt.po
+++ b/locale/cs_CZ/foreman_kubevirt.po
@@ -10,7 +10,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: mhulan <mhulan@redhat.com>, 2020\n"
@@ -26,6 +26,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr ""
 
@@ -38,7 +41,7 @@ msgstr "Akce"
 msgid "Bootable"
 msgstr "Bootovatelné"
 
-msgid "CA crt for KubeVirt only"
+msgid "CA cert for KubeVirt only"
 msgstr ""
 
 msgid "CNI Provider"
@@ -62,9 +65,6 @@ msgstr "Název stroje"
 msgid "Image"
 msgstr "Obraz"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
-
 msgid "Memory"
 msgstr "Operační paměť"
 
@@ -86,7 +86,7 @@ msgstr "Síť"
 msgid "Only one volume can be bootable"
 msgstr "Zaveditelný může být jen jediný svazek"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
 msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
@@ -122,7 +122,7 @@ msgstr ""
 msgid "The compute resource could not be authenticated"
 msgstr ""
 
-msgid "The name of the image in the registry."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
 msgstr ""
 
 msgid ""
