--- a/locale/en_GB/foreman_kubevirt.po
+++ b/locale/en_GB/foreman_kubevirt.po
@@ -9,7 +9,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>, 2023\n"
@@ -24,6 +24,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr "%{cpu_cores} Cores and %{memory} memory"
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr "API Port"
 
@@ -36,8 +39,8 @@ msgstr "Actions"
 msgid "Bootable"
 msgstr "Bootable"
 
-msgid "CA crt for KubeVirt only"
-msgstr "CA crt for KubeVirt only"
+msgid "CA cert for KubeVirt only"
+msgstr ""
 
 msgid "CNI Provider"
 msgstr "CNI Provider"
@@ -60,9 +63,6 @@ msgstr "Hostname"
 msgid "Image"
 msgstr "Image"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr "It is not possible to set a bootable volume and image based provisioning."
-
 msgid "Memory"
 msgstr "Memory"
 
@@ -84,8 +84,8 @@ msgstr "Network"
 msgid "Only one volume can be bootable"
 msgstr "Only one volume can be bootable"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
+msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
 msgstr "Password to authenticate with - used for SSH finish step."
@@ -120,8 +120,8 @@ msgstr "Storage Class"
 msgid "The compute resource could not be authenticated"
 msgstr "The compute resource could not be authenticated"
 
-msgid "The name of the image in the registry."
-msgstr "The name of the image in the registry."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
+msgstr ""
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
