--- a/locale/fr/foreman_kubevirt.po
+++ b/locale/fr/foreman_kubevirt.po
@@ -13,7 +13,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
@@ -29,6 +29,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr "%{cpu_cores} Cores et %{memory} mémoire"
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr "Port API"
 
@@ -41,8 +44,8 @@ msgstr "Actions"
 msgid "Bootable"
 msgstr "Amorçable"
 
-msgid "CA crt for KubeVirt only"
-msgstr "CA crt pour KubeVirt uniquement"
+msgid "CA cert for KubeVirt only"
+msgstr ""
 
 msgid "CNI Provider"
 msgstr "Fournisseur CNI"
@@ -65,9 +68,6 @@ msgstr "Nom d'hôte"
 msgid "Image"
 msgstr "Image"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr "Il n'est pas possible de définir un volume amorçable et un provisionnement basé sur l'image."
-
 msgid "Memory"
 msgstr "Mémoire"
 
@@ -89,8 +89,8 @@ msgstr "Réseau"
 msgid "Only one volume can be bootable"
 msgstr "Un seul volume peut être déclaré pour le démarrage"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr "Fournir éventuellement un CA, ou une chaîne de CA correctement ordonnée ou un chemin d'accès à un fichier. Si laissé vide - non sécurisé."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
+msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
 msgstr "Mot de passe pour l'authentification SSH lors de l'étape finale."
@@ -125,8 +125,8 @@ msgstr "Classe de stockage"
 msgid "The compute resource could not be authenticated"
 msgstr "La ressource compute n'a pas pu être authentifiée"
 
-msgid "The name of the image in the registry."
-msgstr "Le nom de l'image dans le registre."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
+msgstr ""
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
