--- a/locale/it/foreman_kubevirt.po
+++ b/locale/it/foreman_kubevirt.po
@@ -10,7 +10,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Giuseppe Pignataro (Fastbyte01) <rogepix@gmail.com>, 2020\n"
@@ -25,6 +25,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr ""
 
@@ -37,7 +40,7 @@ msgstr "Azioni"
 msgid "Bootable"
 msgstr "Avviabile"
 
-msgid "CA crt for KubeVirt only"
+msgid "CA cert for KubeVirt only"
 msgstr ""
 
 msgid "CNI Provider"
@@ -61,9 +64,6 @@ msgstr "Hostname"
 msgid "Image"
 msgstr "Immagine"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
-
 msgid "Memory"
 msgstr "Memoria"
 
@@ -85,7 +85,7 @@ msgstr "Rete"
 msgid "Only one volume can be bootable"
 msgstr "È possibile avviare un solo volume"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
 msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
@@ -121,7 +121,7 @@ msgstr ""
 msgid "The compute resource could not be authenticated"
 msgstr ""
 
-msgid "The name of the image in the registry."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
 msgstr ""
 
 msgid ""
