--- a/locale/ja/foreman_kubevirt.po
+++ b/locale/ja/foreman_kubevirt.po
@@ -12,7 +12,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarde"
@@ -27,6 +27,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr "コア %{cpu_cores} 個およびメモリー %{memory}"
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr "API ポート"
 
@@ -39,8 +42,8 @@ msgstr "アクション"
 msgid "Bootable"
 msgstr "ブート可能"
 
-msgid "CA crt for KubeVirt only"
-msgstr "KubeVirt 専用の CA 証明書"
+msgid "CA cert for KubeVirt only"
+msgstr ""
 
 msgid "CNI Provider"
 msgstr "CNI プロバイダー"
@@ -63,9 +66,6 @@ msgstr "ホスト名"
 msgid "Image"
 msgstr "イメージ"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr "ブート可能なボリュームとイメージをベースにしたプロビジョニングを設定できません。"
-
 msgid "Memory"
 msgstr "メモリー"
 
@@ -87,8 +87,8 @@ msgstr "ネットワーク"
 msgid "Only one volume can be bootable"
 msgstr "1 つのボリュームのみがブート可能です"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr "オプションで CA、正しく順序付けされた CA チェーン、またはファイルへのパスを指定してください。空白のままにすると、安全ではありません。"
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
+msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
 msgstr "認証に使用するパスワード: SSH の最終ステップで使用されます。"
@@ -123,8 +123,8 @@ msgstr "ストレージクラス"
 msgid "The compute resource could not be authenticated"
 msgstr "コンピュートリソースを認証できませんでした"
 
-msgid "The name of the image in the registry."
-msgstr "レジストリー内のイメージ名。"
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
+msgstr ""
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
