--- a/locale/ka/foreman_kubevirt.po
+++ b/locale/ka/foreman_kubevirt.po
@@ -8,7 +8,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Temuri Doghonadze <temuri.doghonadze@gmail.com>, 2023\n"
@@ -22,6 +22,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr "%{cpu_cores} ბირთვი და %{memory} მეხსიერება"
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr "api_port"
 
@@ -34,8 +37,8 @@ msgstr "ქმედებები"
 msgid "Bootable"
 msgstr "ჩატვირთვადი"
 
-msgid "CA crt for KubeVirt only"
-msgstr "მხოლოდ KubeVirt-ის CA crt"
+msgid "CA cert for KubeVirt only"
+msgstr ""
 
 msgid "CNI Provider"
 msgstr "CNI მომწოდებელი"
@@ -58,9 +61,6 @@ msgstr "ჰოსტის სახელი"
 msgid "Image"
 msgstr "ასლი"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr "შეუძლებელია ერთდროულად ჩატვირთვადი დისკისა და სამუშაოდ ასლით მომზადების ჩართვა."
-
 msgid "Memory"
 msgstr "მეხსიერება"
 
@@ -82,8 +82,8 @@ msgstr "ქსელი"
 msgid "Only one volume can be bootable"
 msgstr "ჩატვირთვადი მხოლოდ ერთი ტომი შეიძლება იყოს"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr "ან მიუთითეთ CA ან CA-ების სწორად დალაგებული ჯაჭვი, ან ბილიკი ფაილამდე. თუ ცარიელს დატოვებთ, დაცული არ იქნება."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
+msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
 msgstr "პაროლი - საბოლოო ნაბიჯისთვის."
@@ -118,8 +118,8 @@ msgstr "საცავის კლასი"
 msgid "The compute resource could not be authenticated"
 msgstr "გამოთვლითი რესურსის ავთენტიკაცია შეუძლებელია"
 
-msgid "The name of the image in the registry."
-msgstr "რეესტრში არსებული ასლის სახელი."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
+msgstr ""
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
