--- a/locale/zh_TW/foreman_kubevirt.po
+++ b/locale/zh_TW/foreman_kubevirt.po
@@ -9,7 +9,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.4.1\n"
+"Project-Id-Version: foreman_kubevirt 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
 "Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>, 2020\n"
@@ -24,6 +24,9 @@ msgstr ""
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
 
+msgid "A bootable volume is required as a target for the image"
+msgstr ""
+
 msgid "API Port"
 msgstr ""
 
@@ -36,7 +39,7 @@ msgstr "動作"
 msgid "Bootable"
 msgstr "可開機"
 
-msgid "CA crt for KubeVirt only"
+msgid "CA cert for KubeVirt only"
 msgstr ""
 
 msgid "CNI Provider"
@@ -60,9 +63,6 @@ msgstr "主機名稱"
 msgid "Image"
 msgstr "影像"
 
-msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
-
 msgid "Memory"
 msgstr "記憶體"
 
@@ -84,7 +84,7 @@ msgstr "網路"
 msgid "Only one volume can be bootable"
 msgstr "只有一個卷冊能作為開機卷冊"
 
-msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
+msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file."
 msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
@@ -120,7 +120,7 @@ msgstr ""
 msgid "The compute resource could not be authenticated"
 msgstr ""
 
-msgid "The name of the image in the registry."
+msgid "The name of the DataSource that contains the image. Use namespace/name notation to use a DataSource in a different namespace."
 msgstr ""
 
 msgid ""
